--- a/.github/workflows/update_report.yml
+++ b/.github/workflows/update_report.yml
@@ -1,6 +1,9 @@
 name: Update Domar Report
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '0 8 * * *' # Runs daily at 08:00 UTC
   workflow_dispatch:      # Allows you to click "Run workflow" manually
