--- a/.github/workflows/update_report.yml
+++ b/.github/workflows/update_report.yml
@@ -1,46 +1,31 @@
-name: Update Domar Report
-
+name: Update Domar Audit
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '0 8 * * *' # Runs daily at 08:00 UTC
-  workflow_dispatch:      # Allows you to click "Run workflow" manually
+    - cron: '0 0 * * *' # Daily at midnight
+  workflow_dispatch:
+
+permissions:
+  contents: write  # CRITICAL: Allows script to update CSV and HTML
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    # These permissions are mandatory for the script to "write" the website branch
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-
+          python-version: '3.9'
       - name: Install dependencies
-        run: |
-          pip install pandas plotly pandas_datareader python-dotenv
-
-      - name: Run Report Generator
+        run: pip install pandas pandas-datareader plotly python-dotenv
+      - name: Run Audit
         env:
           FRED_API_KEY: ${{ secrets.FRED_API_KEY }}
         run: python report_gen.py
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
-          # Change the line below to your custom domain if ready, 
-          # otherwise leave it commented out with a #
-          # cname: domar.yourdomain.com
+      - name: Commit and Push
+        run: |
+          git config --global user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git add domar_audit.csv index.html
+          git commit -m "Automated Audit Update [$(date)]" || exit 0
+          git push
