--- a/.github/workflows/update_report.yml
+++ b/.github/workflows/update_report.yml
@@ -1,31 +1,34 @@
 name: Update Domar Audit
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '0 0 * * *' # Daily at midnight
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 permissions:
-  contents: write  # CRITICAL: Allows script to update CSV and HTML
+  contents: write
 
 jobs:
-  build:
+  run-audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - name: Install dependencies
+      - name: Install Libs
         run: pip install pandas pandas-datareader plotly python-dotenv
-      - name: Run Audit
+      - name: Execute
         env:
           FRED_API_KEY: ${{ secrets.FRED_API_KEY }}
         run: python report_gen.py
-      - name: Commit and Push
+      - name: Commit Files
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add domar_audit.csv index.html
-          git commit -m "Automated Audit Update [$(date)]" || exit 0
+          git commit -m "Audit update: $(date)" || exit 0
           git push
